--- a/authentication/package.json
+++ b/authentication/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
     "nodegit": "^0.20.3",
     "sqlite3": "^3.1.13"
