--- a/manager/package.json
+++ b/manager/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.2",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
+    "form-data": "^2.3.1",
     "formidable": "^1.1.1",
     "nodegit": "^0.20.3"
   }
