--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cacheman": "^2.2.1",
+    "cacheman-file": "^0.2.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
+    "formidable": "^1.1.1",
+    "node-file-cache": "^1.0.2",
     "request": "^2.83.0"
   }
 }
