--- a/directory/package.json
+++ b/directory/package.json
@@ -4,13 +4,16 @@
   "description": "Directory service for the distributed file system",
   "main": "directory.js",
   "scripts": {
+	"start" : "node directory.js 3005",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Callum Duffy",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "nodegit": "^0.20.3",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "sqlite3": "^3.1.13"
   }
 }
