--- a/manager/package.json
+++ b/manager/package.json
@@ -4,11 +4,12 @@
   "description": "manager file for a distributed file system",
   "main": "manager.js",
   "scripts": {
+	"start" : "node manager.js 3000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "github.com/callumduffy/DistribuedFileServer"
+    "url": "github.com/callumduffy/DistributedFileServer"
   },
   "author": "Callum Duffy",
   "license": "ISC",
@@ -18,6 +19,8 @@
     "express": "^4.16.2",
     "form-data": "^2.3.1",
     "formidable": "^1.1.1",
-    "nodegit": "^0.20.3"
+    "nodegit": "^0.20.3",
+    "query-string": "^5.0.1",
+    "request": "^2.83.0"
   }
 }
